2004-06-10  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am ($(monoone_DATA),$(monotwo_DATA),$(monobins_DATA)):
	Don't copy from prefix.  Use $(LN_S) to point to the mcs/ tree.
	* runtime/net_1_1/Makefile.am (mscorlib.dll,$(gac_assemblies)): 
	Use $(LN_S) to point to the mcs/ tree, rather than copying.
	* runtime/net_2_0/Makefile.am (mscorlib.dll,$(gac_assemblies)): Likewise.

2004-06-10  Raja R Harinath  <rharinath@novell.com>	

	Support the new assembly signing setup in mcs/.
	* Makefile.am (mcs-do-basic-build): Pass 'USE_BOOT_COMPILE' to sub-makes.
	($(tmpinst)/etc/mono/machine.config): New target.
	(tmpinst-dir.stamp): Remove and rewrite into ...
	($(tmpinst)/bin/mcs): ... this and ...
	($(tmpinst)/bin/mono): ... this.  Update to use the in-tree machine.config.
	(tmpinst-dir): Rewrite to invoke above $(tmpinst)/... targets directly.
	* configure.in (AC_PROG_LN_S): New check to define $(LN_S).
	
Thu Jun 3 14:39:17 CEST 2004 Paolo Molaro <lupus@ximian.com>

	* configure.in: libc setting for NetBSD (patch from recht@netbsd.org).

2004-06-01  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (bootstrap,faststrap,fasterstrap): Refactor.
	Fix 'faststrap' to be corlib-version-change-safe.
	(one-stage-strap,two-stage-strap,three-stage-strap): Remove.
	(monolite-bootstrap): Update.

2004-05-31  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: fixlets for windows.

2004-05-29  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: export CC instead of passing it to libgc/configure.

2004-05-28  Duncan Mak  <duncan@ximian.com>

	* runtime/Makefile.am: 
	* scripts/Makefile.am: Include mono-find-provides and
	mono-find-requires.
	
	* scripts/mono-find-provides.in:
	* scripts/mono-find-requires.in: New wrapper scripts.

2004-05-27  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Pass CC to libgc configure.

2004-05-27  Gert Driesen (drieseng@users.sourceforge.net)

	* monowiz.win32.nsi: normalized line-endings to unix (LF)
